--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,72 @@
-/*my code here*/
-body {
+html, body, #root, .App {
   width: 100%;
   height: 100%;
   margin: 0px;
   padding: 0px;
 }
-#topbar li {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-#topbar {
+
+/*my code here*/
+a, a:hover, a:focus {
+  text-decoration: none;
+  color: inherit;
+}
+
+.topbar {
+  position: fixed;
   width: 100%;
   height: 10%;
-  margin: 0px;
-  padding: 0px;
-  background-color: red;
-}
-.sidebar {
-  width: 30%;
-  height: 100%;
   background-color: #eee;
+}
+
+.topbar ul {
+  position: relative;
+  padding: 0px 0px 0px 20%;
+  top: 60%;
+  font-size: 150%;
+}
+.topbar li {
+  width: 15%;
+  list-style: none;
+  padding: 0;
+  text-align: center;
+  display: inline-block;
+  transition: .2s;
+}
+.topbar li:hover {
+  background-color: rgb(226, 226, 226);
+}
+.topbar li.active {
+  background-color: rgb(218, 218, 218);
+}
+.topbar .indicator {
+  position: absolute;
+  width: 12%;
+  height: 5%;
+  background: rgb(80, 80, 80);
+  transition: .5s;
+}
+.topbar ul li:nth-child(1).active ~ .indicator {
+  transform: translateX(calc(100% * 0));
+}
+.topbar ul li:nth-child(2).active ~ .indicator {
+  transform: translateX(calc(100% * 1));
+}
+.topbar ul li:nth-child(3).active ~ .indicator {
+  transform: translateX(calc(100% * 2));
+}
+.topbar ul li:nth-child(4).active ~ .indicator {
+  transform: translateX(calc(100% * 3));
+}
+
+#main_container {
+  position: relative;
+  top: 10%;
+  width: 100%;
+  
 }
