--- a/src/App.css
+++ b/src/App.css
@@ -1,72 +1,134 @@
-html, body, #root, .App {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
-/*my code here*/
+html, body, #root, .App {
+  width: 100%;
+  height: 100%;
+}
 a, a:hover, a:focus {
   text-decoration: none;
   color: inherit;
 }
+body {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+}
 
-.topbar {
+/*topbar*/
+#topbar {
   position: fixed;
   width: 100%;
-  height: 10%;
-  background-color: #eee;
+  height: 70px;
+  display: flex;
+  z-index: 3;
 }
-
-.topbar ul {
-  position: relative;
-  padding: 0px 0px 0px 20%;
-  top: 60%;
-  font-size: 150%;
+#topbar ul {
+  margin-bottom: 0;
+  align-self: end;
+  display: flex;
+  width: 100%;
+  height: 50%;
+  justify-content: center;
+  align-content: start;
 }
-.topbar li {
-  width: 15%;
+#topbar ul li {
   list-style: none;
-  padding: 0;
+  width: 100px;
+  height: 100%;
+  z-index: 1;
+}
+#topbar ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   text-align: center;
-  display: inline-block;
+  font-size: 100%;
   transition: .2s;
 }
-.topbar li:hover {
-  background-color: rgb(226, 226, 226);
+#topbar ul li:hover a {
+  background-color: #ccc;
 }
-.topbar li.active {
-  background-color: rgb(218, 218, 218);
+#topbar ul li.active a {
+  background-color: #aaa;
 }
-.topbar .indicator {
+#topbar ul #indicator {
   position: absolute;
-  width: 12%;
-  height: 5%;
-  background: rgb(80, 80, 80);
+  justify-self: end;
+  align-self: end;
+  margin-left: -300px;
+  z-index: 2;
+  width: 100px;
+  height: 5px;
+  background: rgb(80,80,80);
   transition: .5s;
 }
-.topbar ul li:nth-child(1).active ~ .indicator {
+#topbar ul li:nth-child(1).active ~ #indicator {
   transform: translateX(calc(100% * 0));
 }
-.topbar ul li:nth-child(2).active ~ .indicator {
+#topbar ul li:nth-child(2).active ~ #indicator {
   transform: translateX(calc(100% * 1));
 }
-.topbar ul li:nth-child(3).active ~ .indicator {
+#topbar ul li:nth-child(3).active ~ #indicator {
   transform: translateX(calc(100% * 2));
 }
-.topbar ul li:nth-child(4).active ~ .indicator {
+#topbar ul li:nth-child(4).active ~ #indicator {
   transform: translateX(calc(100% * 3));
 }
 
+/*main container*/
 #main_container {
   position: relative;
-  top: 10%;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  top: 70px;
+}
+/*sidebar*/
+#sidebar {
+  width: 30%;
+  height: 100%;
+  border-top: 10px solid rgb(80,80,80);
+}
+#sidebar ul {
   width: 100%;
-  
+  padding: 0;
+  margin: 0;
+}
+#sidebar ul li {
+  list-style: none;
+}
+#sidebar ul li a {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding: 20px 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  transition: .2s;
+}
+#sidebar ul li:hover a {
+  background-color: #eee;
+}
+#sidebar ul li.active a {
+  background-color: #ccc;
+}
+/*main content*/
+#main_content {
+  width: 100%;
+  display: inline-block;
+}
+#items_list {
+  border-top: 5px solid black;
 }
