--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ body {
   display: flex;
   justify-content: start;
   align-items: start;
+  font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5;
 }
 
 /*topbar*/
@@ -27,14 +31,14 @@ body {
   height: 70px;
   display: flex;
   z-index: 3;
+  background-color: rgb(53, 87, 180);
 }
 #topbar ul {
-  margin-bottom: 0;
   align-self: end;
   display: flex;
   width: 100%;
   height: 50%;
-  justify-content: center;
+  justify-content: start;
   align-content: start;
 }
 #topbar ul li {
@@ -53,12 +57,13 @@ body {
   text-align: center;
   font-size: 100%;
   transition: .2s;
+  color: #a0b5fc;
 }
 #topbar ul li:hover a {
-  background-color: #ccc;
+  color: white;
 }
 #topbar ul li.active a {
-  background-color: #aaa;
+  color: white;
 }
 #topbar ul #indicator {
   position: absolute;
@@ -68,7 +73,7 @@ body {
   z-index: 2;
   width: 100px;
   height: 5px;
-  background: rgb(80,80,80);
+  background-color: rgb(219, 218, 226);
   transition: .5s;
 }
 #topbar ul li:nth-child(1).active ~ #indicator {
@@ -94,35 +99,32 @@ body {
 }
 /*sidebar*/
 #sidebar {
-  width: 30%;
+  width: 15%;
   height: 100%;
-  border-top: 10px solid rgb(80,80,80);
+  border-right: 1px solid rgb(218, 211, 219);
 }
 #sidebar ul {
   width: 100%;
   padding: 0;
-  margin: 0;
+  margin: 10px 0 0 0;
 }
 #sidebar ul li {
   list-style: none;
 }
 #sidebar ul li a {
   display: flex;
-  align-content: center;
-  justify-content: center;
-  padding: 20px 0;
-  width: 100%;
+  align-content: start;
+  justify-content: start;
+  padding: 15px 0 0 20px;
   height: 100%;
   text-align: center;
-  font-size: 20px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
   transition: .2s;
 }
-#sidebar ul li:hover a {
-  background-color: #eee;
+#sidebar ul li a:hover {
+  color: rgb(198, 192, 199);
 }
 #sidebar ul li.active a {
-  background-color: #ccc;
 }
 /*main content*/
 #main_content {
