--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
 }
 html, body, #root, .App {
   width: 100%;
@@ -16,12 +15,17 @@ a, a:hover, a:focus {
 body {
   width: 100%;
   display: flex;
-  justify-content: start;
-  align-items: start;
-  font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5;
+  overflow-x: hidden;
+}
+img {
+  width: 100%;
+  height: 100%;
 }
 
 /*topbar*/
@@ -38,8 +42,8 @@ body {
   display: flex;
   width: 100%;
   height: 50%;
-  justify-content: start;
-  align-content: start;
+  justify-content: flex-start;
+  align-content: flex-start;
 }
 #topbar ul li {
   list-style: none;
@@ -65,29 +69,6 @@ body {
 #topbar ul li.active a {
   color: white;
 }
-#topbar ul #indicator {
-  position: absolute;
-  justify-self: end;
-  align-self: end;
-  margin-left: -300px;
-  z-index: 2;
-  width: 100px;
-  height: 5px;
-  background-color: rgb(219, 218, 226);
-  transition: .5s;
-}
-#topbar ul li:nth-child(1).active ~ #indicator {
-  transform: translateX(calc(100% * 0));
-}
-#topbar ul li:nth-child(2).active ~ #indicator {
-  transform: translateX(calc(100% * 1));
-}
-#topbar ul li:nth-child(3).active ~ #indicator {
-  transform: translateX(calc(100% * 2));
-}
-#topbar ul li:nth-child(4).active ~ #indicator {
-  transform: translateX(calc(100% * 3));
-}
 
 /*main container*/
 #main_container {
@@ -100,6 +81,7 @@ body {
 /*sidebar*/
 #sidebar {
   width: 15%;
+  min-width: 200px;
   height: 100%;
   border-right: 1px solid rgb(218, 211, 219);
 }
@@ -107,30 +89,114 @@ body {
   width: 100%;
   padding: 0;
   margin: 10px 0 0 0;
+  font-family:  Verdana, sans-serif;
 }
 #sidebar ul li {
   list-style: none;
 }
 #sidebar ul li a {
   display: flex;
-  align-content: start;
-  justify-content: start;
+  align-content: flex-start;
+  justify-content: flex-start;
   padding: 15px 0 0 20px;
   height: 100%;
   text-align: center;
   font-size: 16px;
   transition: .2s;
-}
-#sidebar ul li a:hover {
   color: rgb(198, 192, 199);
 }
-#sidebar ul li.active a {
+#sidebar ul li a:hover {
+  color: rgb(136, 136, 141);
 }
+#sidebar #search_bar {
+  margin: 10px;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid rgb(218, 211, 219);
+}
+#sidebar #search_bar input {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid rgb(221, 221, 221);
+  border-radius: .5rem;
+}
+#sidebar #search_bar input:focus {
+  outline: none !important;
+  border: 1px solid rgb(145, 140, 140);
+}
+#sidebar ul li.add_category_input {
+  padding: 5px 0 5px 20px;
+  margin-top: 15px;
+  border-top: 2px dashed rgb(198, 192, 199);
+  border-bottom: 2px dashed rgb(198, 192, 199);
+}
+#sidebar ul li.add_category_input input {
+  width: 70%;
+  border: none;
+}
+#sidebar ul li.add_category_input input::placeholder {
+  color:  rgb(198, 192, 199);
+}
+#sidebar ul li.add_category_input input:focus {
+  outline: none !important;
+  width: 70%;
+  border: none;
+}
+#sidebar ul li.add_category_input button {
+  width: 15%;
+  height: auto;
+  border: none;
+  background-color: white;
+}
+
+
 /*main content*/
 #main_content {
   width: 100%;
   display: inline-block;
 }
-#items_list {
-  border-top: 5px solid black;
+#main_content_container {
+  display: flex;
+  flex-direction: column;
+}
+#main_content_container .items_head {
+  font-family:Arial, Helvetica, sans-serif;
+  text-align: left;
+  background-color: #eee;
+}
+#main_content_container .items_list {
+  background-color: #eee;
+}
+#main_content_container .i_container {
+  border: 1px solid #aaa;
+  border-left: none;
+  border-bottom: none;
+}
+#main_content_container .i_container [class*='row'] {
+  font-weight: 100;
+  border-left: 1px solid #aaa;
+  display: flex;
+}
+#main_content_container .i_container .top_row {
+  font-weight: 500;
+  text-align: center;
+}
+#main_content_container .i_container [class*='row'] > [class*='col'] {
+  align-self: center;
+  border-bottom: 1px solid #aaa;
+  display: flex;
+  flex-direction: column;
+}
+#main_content_container table, th, td {
+  border: 1px solid #aaa;
+}
+#main_content_container table th {
+  font-family:Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+#main_content_container table td div {
+  font-weight: 100;
+  margin: 1rem;
+}
+#main_content_container table tr:nth-child(odd){
+  background-color: #eee;
 }
