--- a/src/App.css
+++ b/src/App.css
@@ -85,67 +85,23 @@ img {
   height: 100%;
   border-right: 1px solid rgb(218, 211, 219);
 }
-#sidebar ul {
-  width: 100%;
-  padding: 0;
-  margin: 10px 0 0 0;
-  font-family:  Verdana, sans-serif;
+#sidebar h5 {
+  margin: 10px;
 }
-#sidebar ul li {
-  list-style: none;
-}
-#sidebar ul li a {
-  display: flex;
-  align-content: flex-start;
-  justify-content: flex-start;
-  padding: 15px 0 0 20px;
-  height: 100%;
-  text-align: center;
-  font-size: 16px;
-  transition: .2s;
-  color: rgb(198, 192, 199);
-}
-#sidebar ul li a:hover {
-  color: rgb(136, 136, 141);
-}
-#sidebar #search_bar {
+#sidebar .sidebar_section {
   margin: 10px;
   padding-bottom: 1rem;
   border-bottom: 1px solid rgb(218, 211, 219);
 }
-#sidebar #search_bar input {
+#sidebar .search_bar input {
   width: 100%;
   padding: 5px;
   border: 1px solid rgb(221, 221, 221);
   border-radius: .5rem;
 }
-#sidebar #search_bar input:focus {
+#sidebar .search_bar input:focus {
   outline: none !important;
   border: 1px solid rgb(145, 140, 140);
-}
-#sidebar ul li.add_category_input {
-  padding: 5px 0 5px 20px;
-  margin-top: 15px;
-  border-top: 2px dashed rgb(198, 192, 199);
-  border-bottom: 2px dashed rgb(198, 192, 199);
-}
-#sidebar ul li.add_category_input input {
-  width: 70%;
-  border: none;
-}
-#sidebar ul li.add_category_input input::placeholder {
-  color:  rgb(198, 192, 199);
-}
-#sidebar ul li.add_category_input input:focus {
-  outline: none !important;
-  width: 70%;
-  border: none;
-}
-#sidebar ul li.add_category_input button {
-  width: 15%;
-  height: auto;
-  border: none;
-  background-color: white;
 }
 
 
@@ -163,46 +119,32 @@ img {
   text-align: left;
   background-color: #eee;
 }
-#main_content_container .items_list {
-  background-color: #eee;
-}
-#main_content_container .i_container {
-  border: 1px solid #aaa;
-  border-left: none;
-  border-bottom: none;
-}
-#main_content_container .i_container [class*='row'] {
-  font-weight: 100;
-  border-left: 1px solid #aaa;
-  display: flex;
-}
-#main_content_container .i_container .top_row {
-  font-weight: 500;
-  text-align: center;
-}
-#main_content_container .i_container [class*='row'] > [class*='col'] {
-  align-self: center;
+#main_content_container table, th, td {
   border-bottom: 1px solid #aaa;
-  display: flex;
-  flex-direction: column;
 }
-#main_content_container .outer_table .inner_table {
-  width: 100%;
+#main_content_container table th {
+  padding: 1rem 0 1rem 1rem;
+  font-family: Trebuchet MS, sans-serif;
+  text-align: left;
 }
-#main_content_container .outer_table .inner_table tr:nth-child(even) {
-  background-color: white;
-}
-#main_content_container .outer_table, th, td {
-  border: 1px solid #aaa;
-}
-#main_content_container .outer_table th {
-  font-family:Arial, Helvetica, sans-serif;
-  text-align: center;
-}
-#main_content_container .outer_table td div {
+#main_content_container table td div {
   font-weight: 100;
   margin: 1rem;
 }
-#main_content_container .outer_table tr:nth-child(odd){
+#main_content_container table tr:nth-child(odd){
   background-color: #eee;
+}
+
+#main_content_container table .events_container {
+  display: flex;
+}
+#main_content_container table .events_container div {
+  border: 1px solid #ccc;
+  background-color: white;
+  border-radius: 15px;
+  padding: .5rem;
+  text-align: center;
+}
+#main_content_container table .events_container div p:nth-child(1){
+  background-color: rgb(241, 214, 233);
 }
