--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,6 @@ img {
   display: flex;
   flex-direction: row;
   height: 100%;
-  top: 70px;
 }
 /*sidebar*/
 #sidebar {
@@ -110,6 +109,24 @@ img {
   width: 100%;
   display: inline-block;
 }
+#main_content_header {
+  height: 5rem;
+  border-bottom: 2px solid #ccc;
+  display: flex;
+  align-items: flex-end;
+  padding-left: .5rem;
+}
+#main_content_header div {
+  margin: .5rem;
+  color: #ccc;
+  transition: .2s;
+}
+#main_content_header div:hover {
+  color: black;
+}
+#main_content_header div.active {
+  color: black;
+}
 #main_content_container {
   display: flex;
   flex-direction: column;
@@ -127,6 +144,12 @@ img {
   margin: auto;
   border-bottom: 1px solid rgb(238, 238, 238);
   padding-bottom: 1rem;
+}
+.categories_output .column_headers .buttons {
+}
+.categories_output .column_headers button {
+  border: none;
+  background-color: transparent;
 }
 
 .categories_output .items_output {
@@ -146,13 +169,14 @@ img {
   padding: .5rem;
   text-align: center;
 }
+.categories_output .new_item {
+  transition: 1s;
+}
 .categories_output .new_item button {
   padding: .5rem;
   background-color: transparent;
 }
-.categories_output .new_item.active {
-  visibility: visible;
-}
 .categories_output .new_item.inactive {
+  height: 0;
   visibility: hidden;
 }
