--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,18 @@ body {
   line-height: 1.5;
   overflow-x: hidden;
 }
+button {
+  font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+}
 img {
   width: 100%;
   height: 100%;
+}
+p {
+  margin: 0;
+  padding: 0;
 }
 
 /*topbar*/
@@ -91,6 +100,7 @@ img {
 }
 #sidebar .sidebar_section .h8 {
   font-size: 1rem;
+  margin-bottom: 1rem;
 }
 #sidebar .search_bar input {
   width: 100%;
@@ -116,17 +126,38 @@ img {
   align-items: flex-end;
   padding-left: .5rem;
 }
-#main_content_header div {
+#main_content_header .list {
   margin: .5rem;
   color: #ccc;
   transition: .2s;
 }
-#main_content_header div:hover {
+#main_content_header .list:hover {
   color: black;
 }
-#main_content_header div.active {
+#main_content_header .list.active {
   color: black;
 }
+#main_content_header .list button {
+  border: none;
+  background-color: transparent;
+}
+#main_content_header .addCategoryButton {
+  margin-left: 2rem;
+  margin-bottom: .5rem;
+}
+#main_content_header .addCategoryButton svg {
+  margin-right: .5rem;
+  margin-bottom: .1rem;
+}
+#main_content_header .addCategoryButton button {
+  border: none;
+  background-color: transparent;
+  transition: .1s;
+}
+#main_content_header .addCategoryButton button:hover {
+  color: #ccc;
+}
+
 #main_content_container {
   display: flex;
   flex-direction: column;
@@ -139,6 +170,11 @@ img {
 }
 .categories_output .category_header {
   padding: 1rem;
+  background-color: rgb(214, 214, 214);
+}
+.categories_output .category_header svg {
+  margin-bottom: .1rem;
+  margin-left: 1rem;
 }
 .categories_output .toggle_open {
   overflow: hidden;
@@ -149,17 +185,50 @@ img {
 }
 .categories_output .column_headers {
   margin: auto;
+  margin-top: 1rem;
   border-bottom: 1px solid rgb(238, 238, 238);
   padding-bottom: 1rem;
 }
 .categories_output .column_headers button {
   border: none;
   background-color: transparent;
+  transition: .1s;
+}
+.categories_output .column_headers button:hover {
+  color: #ccc;
+}
+.categories_output .column_headers button svg {
+  margin-right: .5rem;
+  margin-bottom: .1rem;
 }
 
 .categories_output .items_output {
   padding: .5rem 0;
   margin: auto;
+}
+.categories_output .items_output .col-sm {
+  margin: auto;
+}
+.categories_output .items_output:hover {
+  background-color: #eee;
+}
+.categories_output .items_output .item_edit {
+  border: none;
+  padding: .5rem;
+  background-color: transparent;
+  margin-left: .1rem;
+}
+.categories_output .items_output .item_edit:hover {
+  color: #ccc;
+}
+.categories_output .items_output .item_close {
+  padding: .5rem;
+  background-color: transparent;
+  margin-left: .1rem;
+  transition: .1s;
+}
+.categories_output .items_output .item_close:hover {
+  background-color: #ccc;
 }
 
 
@@ -180,6 +249,11 @@ img {
 .categories_output .new_item button {
   padding: .5rem;
   background-color: transparent;
+  margin-left: .1rem;
+  transition: .1s;
+}
+.categories_output .new_item button:hover {
+  background-color: #ccc;
 }
 .categories_output .new_item.inactive {
   display: none;
